--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,5 +21,5 @@ build:
   verbosity: minimal
 
 artifacts:
-- path: KExtensions.Core\bin\$(configuration)\KExtensions.Core.dll
-  name: KExtensions.Core.dll
+- path: KExtensions.Core\bin\$(configuration)\KExtensions.dll
+  name: KExtensions.dll
