--- a/KExtensions.Tests/KExtensions.Tests.csproj
+++ b/KExtensions.Tests/KExtensions.Tests.csproj
@@ -57,7 +57,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="HelpersTests.cs" />
+    <Compile Include="HelpersTests\KGridHelpersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
