--- a/src/KExtensions.Tests/KExtensions.Tests.csproj
+++ b/src/KExtensions.Tests/KExtensions.Tests.csproj
@@ -57,6 +57,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ExtensionsTests\StringExtensionsTests.cs" />
     <Compile Include="HelpersTests\KGridHelpersTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
