--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,25 +1,8 @@
-version: '1.0.0.{build}'
+build_script:
+- ps: .\build.ps1
 
-pull_requests:
-  do_not_increment_build_number: true
-
-configuration: Release
-
+test: off
 skip_tags: true
-
-assembly_info:
-  patch: true
-  file: '**\AssemblyInfo.*'
-  assembly_version: '1.0.0'
-  assembly_file_version: '{version}'
-  assembly_informational_version: '1.0.0'
-
-before_build:
-- cmd: nuget restore src\KExtensions.sln
-
-build:
-  project: src\KExtensions.sln  verbosity: minimal
-
-artifacts:
-- path: src\KExtensions.Core\bin\$(configuration)\KExtensions.dll
-  name: KExtensions.dll
+skip_branch_with_pr: true
+image: 
+- Visual Studio 2017
