Update Cake & cie

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,11 @@
+install:
+- dotnet tool install -g Cake.Tool --version 0.34.1
+
 build_script:
-- ps: .\build.ps1
+- dotnet cake build.cake --verbosity=Verbose
 
 test: off
 skip_tags: true
 skip_branch_with_pr: true
 image: 
-- Visual Studio 2017
+- Visual Studio 2019
